[package]
name = "tetris_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.9.3"
image = { version = "0.24", default-features = false, features = [
   "gif",
   "png",
   "pnm",
   "tga",
   "tiff",
   "webp",
   "bmp",
   "dxt",
   "jpeg"
] }
rand = "0.8.5"